# remoteVscodeClaude

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  TODO.md  imgui.ini  start_gui.cmd  step.md  structure.md
.claude/: settings.json  settings.local.json
config/: config.json
include/action/: IActionExecutor.h
include/comm/: ICommunicator.h  IOCR.h
include/core/: Config.h  CrashGuard.h  EventBus.h  IPC.h  IPlugin.h  Json.h  Logger.h  PluginManager.h
include/monitor/: IRegionMonitor.h  IScreenCapture.h
src/action/: Win32Action.cpp
src/comm/: OCREngine.cpp  WeChatComm.cpp
src/core/: Config.cpp  CrashGuard.cpp  EventBus.cpp  IPC.cpp  Logger.cpp  PluginManager.cpp  main.cpp
src/gui/: App.cpp  App.h  main_gui.cpp
src/monitor/: MonitorPlugin.cpp
test/: TestFramework.h  test_action.cpp  test_comm.cpp  test_config.cpp  test_eventbus.cpp  test_ipc.cpp  test_json.cpp  test_logger.cpp  test_monitor.cpp  test_parse_cmd.cpp  test_strategy_parse.cpp  test_yes_detect.cpp
